codex-agent-runtime-desktop/native/c-api/include/codex_agent.h

typedef int32_t codex_agent_status_t;
typedef struct codex_agent_context codex_agent_context_t;
typedef struct codex_agent_host codex_agent_host_t;
typedef struct codex_agent_agent codex_agent_agent_t;
typedef struct codex_agent_conversations codex_agent_conversations_t;
typedef struct codex_agent_conversation codex_agent_conversation_t;
typedef struct codex_agent_operation codex_agent_operation_t;
typedef struct codex_agent_subscription codex_agent_subscription_t;
typedef struct codex_agent_snapshot codex_agent_snapshot_t;
typedef struct codex_agent_failure codex_agent_failure_t;
typedef int32_t codex_agent_host_state_kind_t;
typedef int32_t codex_agent_workspace_selection_reason_t;
typedef int32_t codex_agent_conversation_status_t;
/*
 * Input views are copied before an API call returns and must contain strict
 * UTF-8. Versioned input structs accept struct_size values at least as large
 * as the ABI 1.1 definition. String-copy functions report the exact number of
 * UTF-8 bytes in out_required, do not append NUL, and do not partially modify
 * the destination when returning BUFFER_TOO_SMALL.
 *
 * Every out_* handle slot must be non-null and initially contain NULL. Every
 * non-OK return preserves its exact value. Every non-NULL handle returned on
 * OK is a distinct owned token scoped to its creating context. Copying a raw
 * pointer does not create another token or owner; use the matching retain
 * function, when provided, to obtain a distinct owned alias.
 *
 * A non-null release or destroy slot whose value is NULL is idempotently
 * successful. Release and destroy functions write NULL only on OK; every
 * non-OK result, including BUSY, preserves the exact slot value. Apart from
 * the callback-publication guarantee below, caller-owned slots must not be
 * accessed concurrently.
 */

/*
 * Asynchronous callbacks run on library worker threads, are serialized per
 * context, and may begin before the initiating API call returns. The operation
 * or subscription output token is published before its first callback begins,
 * and an operation result is published before its operation callback begins.
 *
 * Callbacks must not unwind across the C boundary. A non-NULL operation
 * callback and its user_data must remain valid until that callback returns or
 * operation destruction returns OK. A state callback and its user_data must
 * remain valid until its terminal callback returns or subscription destruction
 * returns OK. BUSY destruction preserves the handle and does not end these
 * lifetimes; a callback may still begin or be running.
 */
typedef void (CODEX_AGENT_CALL *codex_agent_operation_callback_t)(
    codex_agent_context_t *context,
    codex_agent_operation_t *operation,
    void *user_data);
/*
 * Ownership of each non-NULL snapshot transfers when the state callback is
 * entered. The snapshot is immutable and must be passed once to
 * codex_agent_snapshot_destroy unless its context is successfully destroyed
 * first.
 */
typedef void (CODEX_AGENT_CALL *codex_agent_state_callback_t)(
    codex_agent_context_t *context,
    codex_agent_subscription_t *subscription,
    codex_agent_status_t event_status,
    codex_agent_snapshot_t *snapshot,
    int32_t is_terminal,
    void *user_data);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_conversation_cancel_turn(
    codex_agent_context_t *context,
    codex_agent_conversation_t *conversation,
    codex_agent_operation_callback_t callback,
    void *user_data,
    codex_agent_operation_t **out_operation);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_conversation_close(
    codex_agent_context_t *context,
    codex_agent_conversation_t *conversation,
    codex_agent_operation_callback_t callback,
    void *user_data,
    codex_agent_operation_t **out_operation);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_conversation_state_get(
    codex_agent_context_t *context,
    codex_agent_conversation_t *conversation,
    codex_agent_snapshot_t **out_snapshot);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_conversation_state_subscribe(
    codex_agent_context_t *context,
    codex_agent_conversation_t *conversation,
    codex_agent_state_callback_t callback,
    void *user_data,
    codex_agent_subscription_t **out_subscription);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_operation_cancel(
    codex_agent_context_t *context,
    codex_agent_operation_t *operation);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_operation_result(
    codex_agent_context_t *context,
    codex_agent_operation_t *operation,
    codex_agent_status_t *out_result);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_operation_conversation(
    codex_agent_context_t *context,
    codex_agent_conversations_t *conversations,
    codex_agent_operation_t *operation,
    codex_agent_conversation_t **out_conversation);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_operation_failure(
    codex_agent_context_t *context,
    codex_agent_operation_t *operation,
    codex_agent_failure_t **out_failure);
/*
 * Destroy requests cancellation and never waits. BUSY preserves the slot and
 * means callbacks and user_data remain live; retry after quiescence. OK writes
 * NULL and guarantees that no later callback for this operation can begin.
 */
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_operation_destroy(
    codex_agent_context_t *context,
    codex_agent_operation_t **operation);
/*
 * Subscription destruction has the same BUSY/retry/slot/quiescence contract
 * as operation destruction. A terminal callback occurs at most once.
 */
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_subscription_destroy(
    codex_agent_context_t *context,
    codex_agent_subscription_t **subscription);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_snapshot_destroy(
    codex_agent_context_t *context,
    codex_agent_snapshot_t **snapshot);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_host_state_kind(
    codex_agent_context_t *context,
    codex_agent_snapshot_t *snapshot,
    codex_agent_host_state_kind_t *out_kind);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_host_state_agent(
    codex_agent_context_t *context,
    codex_agent_host_t *host,
    codex_agent_snapshot_t *snapshot,
    codex_agent_agent_t **out_agent);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_host_state_failure(
    codex_agent_context_t *context,
    codex_agent_snapshot_t *snapshot,
    codex_agent_failure_t **out_failure);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_host_state_has_workspace(
    codex_agent_context_t *context,
    codex_agent_snapshot_t *snapshot,
    int32_t *out_has_workspace);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_host_state_workspace_path_copy(
    codex_agent_context_t *context,
    codex_agent_snapshot_t *snapshot,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_host_state_workspace_display_name_copy(
    codex_agent_context_t *context,
    codex_agent_snapshot_t *snapshot,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_host_state_requirement_reason(
    codex_agent_context_t *context,
    codex_agent_snapshot_t *snapshot,
    codex_agent_workspace_selection_reason_t *out_reason);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_host_state_requirement_message_copy(
    codex_agent_context_t *context,
    codex_agent_snapshot_t *snapshot,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_active_conversation(
    codex_agent_context_t *context,
    codex_agent_conversations_t *conversations,
    codex_agent_snapshot_t *snapshot,
    codex_agent_conversation_t **out_conversation);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_conversation_state_status(
    codex_agent_context_t *context,
    codex_agent_snapshot_t *snapshot,
    codex_agent_conversation_status_t *out_status);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_conversation_state_failure(
    codex_agent_context_t *context,
    codex_agent_snapshot_t *snapshot,
    codex_agent_failure_t **out_failure);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_failure_release(
    codex_agent_context_t *context,
    codex_agent_failure_t **failure);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_failure_code_copy(
    codex_agent_context_t *context,
    codex_agent_failure_t *failure,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_failure_message_copy(
    codex_agent_context_t *context,
    codex_agent_failure_t *failure,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_failure_is_recoverable(
    codex_agent_context_t *context,
    codex_agent_failure_t *failure,
    int32_t *out_is_recoverable);