codex-agent-bindings/csharp/src/CodexAgent/Interop/NativeMethods.cs


    [LibraryImport(LibraryName, EntryPoint = "codex_agent_conversation_cancel_turn")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus ConversationCancelTurnImport(nint context, nint conversation, delegate* unmanaged[Cdecl]<nint, nint, nint, void> callback, nint userData, out nint operation);
    internal static CodexStatus ConversationCancelTurn(nint context, nint conversation, delegate* unmanaged[Cdecl]<nint, nint, nint, void> callback, nint userData, out nint operation)
    { var status = ConversationCancelTurnImport(context, conversation, callback, userData, out operation); RecordExactCall(); return status; }

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_conversation_close")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus ConversationCloseImport(nint context, nint conversation, delegate* unmanaged[Cdecl]<nint, nint, nint, void> callback, nint userData, out nint operation);
    internal static CodexStatus ConversationClose(nint context, nint conversation, delegate* unmanaged[Cdecl]<nint, nint, nint, void> callback, nint userData, out nint operation)
    { var status = ConversationCloseImport(context, conversation, callback, userData, out operation); RecordExactCall(); return status; }

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_conversation_state_get")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus ConversationStateGetImport(nint context, nint conversation, out nint snapshot);
    internal static CodexStatus ConversationStateGet(nint context, nint conversation, out nint snapshot)
    { var status = ConversationStateGetImport(context, conversation, out snapshot); RecordExactCall(); return status; }

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_conversation_state_subscribe")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus ConversationStateSubscribeImport(nint context, nint conversation, delegate* unmanaged[Cdecl]<nint, nint, CodexStatus, nint, int, nint, void> callback, nint userData, out nint subscription);
    internal static CodexStatus ConversationStateSubscribe(nint context, nint conversation, delegate* unmanaged[Cdecl]<nint, nint, CodexStatus, nint, int, nint, void> callback, nint userData, out nint subscription)
    { var status = ConversationStateSubscribeImport(context, conversation, callback, userData, out subscription); RecordExactCall(); return status; }

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_operation_cancel")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus OperationCancel(nint context, nint operation);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_operation_result")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus OperationResultImport(nint context, nint operation, out CodexStatus result);

    internal static CodexStatus OperationResult(nint context, nint operation, out CodexStatus result)
    {
        var status = OperationResultImport(context, operation, out result);
        RecordExactCall();
        return status;
    }

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_operation_conversation")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus OperationConversationImport(nint context, nint conversations, nint operation, out nint conversation);
    internal static CodexStatus OperationConversation(nint context, nint conversations, nint operation, out nint conversation)
    { var status = OperationConversationImport(context, conversations, operation, out conversation); RecordExactCall(); return status; }

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_operation_failure")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus OperationFailure(nint context, nint operation, out nint failure);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_operation_destroy")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus OperationDestroy(nint context, ref nint operation);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_subscription_destroy")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus SubscriptionDestroy(nint context, ref nint subscription);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_snapshot_destroy")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus SnapshotDestroy(nint context, ref nint snapshot);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_host_state_kind")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus HostStateKindImport(nint context, nint snapshot, out CodexHostStateKind kind);
    internal static CodexStatus HostStateKind(nint context, nint snapshot, out CodexHostStateKind kind)
    { var status = HostStateKindImport(context, snapshot, out kind); RecordExactCall(); return status; }

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_host_state_agent")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus HostStateAgentImport(nint context, nint host, nint snapshot, out nint agent);
    internal static CodexStatus HostStateAgent(nint context, nint host, nint snapshot, out nint agent)
    { var status = HostStateAgentImport(context, host, snapshot, out agent); RecordExactCall(); return status; }

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_host_state_failure")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus HostStateFailure(nint context, nint snapshot, out nint failure);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_host_state_has_workspace")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus HostStateHasWorkspace(nint context, nint snapshot, out int hasWorkspace);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_host_state_workspace_path_copy")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus HostStateWorkspacePathCopy(nint context, nint snapshot, byte* buffer, nuint capacity, out nuint required);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_host_state_workspace_display_name_copy")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus HostStateWorkspaceDisplayNameCopy(nint context, nint snapshot, byte* buffer, nuint capacity, out nuint required);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_host_state_requirement_reason")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus HostStateRequirementReason(nint context, nint snapshot, out CodexWorkspaceSelectionReason reason);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_host_state_requirement_message_copy")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus HostStateRequirementMessageCopy(nint context, nint snapshot, byte* buffer, nuint capacity, out nuint required);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_active_conversation")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus ActiveConversationImport(nint context, nint conversations, nint snapshot, out nint conversation);
    internal static CodexStatus ActiveConversation(nint context, nint conversations, nint snapshot, out nint conversation)
    { var status = ActiveConversationImport(context, conversations, snapshot, out conversation); RecordExactCall(); return status; }

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_conversation_state_status")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus ConversationStateStatus(nint context, nint snapshot, out CodexConversationStatus status);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_conversation_state_failure")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus ConversationStateFailure(nint context, nint snapshot, out nint failure);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_failure_release")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus FailureRelease(nint context, ref nint failure);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_failure_code_copy")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus FailureCodeCopy(nint context, nint failure, byte* buffer, nuint capacity, out nuint required);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_failure_message_copy")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus FailureMessageCopy(nint context, nint failure, byte* buffer, nuint capacity, out nuint required);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_failure_is_recoverable")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus FailureIsRecoverable(nint context, nint failure, out int recoverable);
}
